# battlefield-anti-idle

./: Cargo.toml  LICENSE  Readme.md  config.txt
.github/workflows/: main.yml  rust-clippy.yml  rust.yml
src/: actions.rs  bf1.rs  bf2042.rs  bf4.rs  bfv.rs  chars.rs  main.rs  send_keys.rs  shared_main.rs  structs.rs  test_msg.rs
