[package]
name = "bf1-anti-afk-script"
description = ""
version = "0.1.0"
edition = "2018"
authors = ["iiTzArcur <arcur@gametools.network>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
winapi = { version = "0.3.9", features = ["winuser"] }