[package]
name = "battlefield-anti-afk-script"
description = ""
version = "0.1.0"
edition = "2018"
authors = ["iiTzArcur <arcur@gametools.network>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
winapi = { version = "0.3.9", features = ["winuser"] }
log = "0.4"
env_logger = "0.10.0"
chrono = "*"
confy = "0.5.1"

[[bin]]
name = "bf4"
path = "src/bf4.rs"

[[bin]]
name = "bf1"
path = "src/bf1.rs"

[[bin]]
name = "bfv"
path = "src/bfv.rs"

[[bin]]
name = "bf2042"
path = "src/bf2042.rs"